[package]
name = "dagger-dash-mon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
tokio = { version = "1.36.0", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
askama = { version = "0.12.1", features = ["with-axum"]}
askama_axum = "0.4.0"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0.68"
logwatcher = "0.1.1"
toml = "0.8.10"
axum-extra = { version = "0.9.2", features = ["cookie-private"] }
tower-http = { version = "0.5.1", features = ["cors", "fs"] }
regex = "1.10.3"
chrono = "0.4.34"
